--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>League Coach</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
@@ -67,6 +68,31 @@
                 <td>L</td>
             </tr>
         </tbody>
+        <section class="section">
+            <div class="container">
+                <!-- Start Carousel -->
+                <div id="carousel-demo" class="carousel">
+                    <div class="item-1">
+                        <!-- Slide Content -->
+                    </div>
+                    <div class="item-2">
+                        <!-- Slide Content -->
+                    </div>
+                    <div class="item-3">
+                        <!-- Slide Content -->
+                    </div>
+                </div>
+                <!-- End Carousel -->
+            </div>
+        </section>
+
+        <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
+        <script>
+            bulmaCarousel.attach('#carousel-demo', {
+                slidesToScroll: 1,
+                slidesToShow: 4
+            });
+        </script>
     </table>
 
 
