--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 <th>
                     <div class="container"><img href=""></div>
                 </th>
-                <td><strong><a href="https://u.gg/lol/profile/na1/halmakin/overview" title="Summoner">Halmakin</a></strong>
+                <td><strong><a href="https://u.gg/lol/profile/na1/" + halmakin + "/overview" title="Summoner">Halmakin</a></strong>
                 </td>
                 <td>L</td>
                 <td>L</td>
@@ -72,19 +72,23 @@
         </tbody>
         <section class="section">
             <div class="container">
-                <!-- Start Carousel -->
                 <div id="carousel-demo" class="carousel" data-slides-to-scroll="5">
                     <div class="item-1">
-                        <!-- Slide Content -->
+                        <img src="/public/images/thumb1.jpg" alt="">
                     </div>
                     <div class="item-2">
-                        <!-- Slide Content -->
+                        <img src="/public/images/thumb2.jpg" alt="">
                     </div>
                     <div class="item-3">
-                        <!-- Slide Content -->
+                        <img src="/public/images/thumb3.jpg" alt="">
+                    </div>
+                    <div class="item-4">
+                        <img src="/public/images/thumb4.jpg" alt="">
+                    </div>
+                    <div class="item-5">
+                        <img src="/public/images/thumb5.jpg" alt="">
                     </div>
                 </div>
-                <!-- End Carousel -->
             </div>
         </section>
 
