bulma bad bootstrap good

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 <th>
                     <div class="container"><img href=""></div>
                 </th>
-                <td><strong><a href="https://u.gg/lol/profile/na1/" + halmakin + "/overview" title="Summoner">Halmakin</a></strong>
+                <td><strong><a href="https://u.gg/lol/profile/na1/halmakin/overview" title="Summoner">Halmakin</a></strong>
                 </td>
                 <td>L</td>
                 <td>L</td>
@@ -94,6 +94,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
         <script>
+            var require = require("bulma");
+            var require = require("bulma-carousel");
             bulmaCarousel.attach('#carousel-demo', {
                 slidesToScroll: 1,
                 slidesToShow: 4
