--- a/public/index.html
+++ b/public/index.html
@@ -78,44 +78,44 @@
                     <label for=video-search>Search For a Video</label> 
                     <input type=text name=video-search id=video-search class="form-control video-search"> 
                 </div> 
-            <button type=submit class="btn btn-default search-submit" id = "btnID">Search</button>
+            <button type=submit class="button is-danger search-submit" id = "btnID">Search</button>
             
             </form>
-            <button class="btn btn-default search-clear">Clear Search</button>
+            <button class="button is-danger search-clear">Clear Search</button>
 
         <section class="section">
             <div class="container">
                 <!-- Start Carousel -->
                 <div id="carousel-demo" class="carousel">
-                    <div class="item-1">
+                    <div class="item-1" id = "items">
                         <!-- Slide Content -->
                         
                     </div>
-                    <div class="item-2">
+                    <div class="item-2" id = "items">
                         <!-- Slide Content -->
                     </div>
-                    <div class="item-3">
+                    <div class="item-3" id = "items">
                         <!-- Slide Content -->
                     </div>
-                    <div class="item-4">
+                    <div class="item-4" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-5">
+                    <div class="item-5" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-6">
+                    <div class="item-6" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-7">
+                    <div class="item-7" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-8">
+                    <div class="item-8" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-9">
+                    <div class="item-9" id = "items">
                             <!-- Slide Content -->
                     </div>
-                    <div class="item-10">
+                    <div class="item-10" id = "items">
                             <!-- Slide Content -->
                     </div>
                 </div>
